--- a/ScreenShot/My Project/Resources.resx
+++ b/ScreenShot/My Project/Resources.resx
@@ -154,6 +154,15 @@
   <data name="screenbtn9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\screenbtn9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="screenbtncenter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\screenbtncenter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="screenbtnprzywroc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\screenbtnprzywroc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="screenbtntekst" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\screenbtntekst.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="welcomescreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\welcomescreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
